<resources>
    <string name="app_name">Zero Note</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_your_notes">Search your notes…</string>
    <string name="add_new_note">Add new note</string>
    <string name="title_activity_note">NoteActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="tittle">Tittle</string>
    <string name="go_back">Go Back</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="tags">Tag</string>
    <string name="lorem_ipsum">Lorem ipsum …</string>
    <string name="sample_text_holder">Sat 11:30:00 30/4/1975 | 150 words | 500 characters</string>
    <string name="horizontal_line">Horizontal line</string>
    <string name="indent_button">Indent button</string>
</resources>