<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <ScrollView
        android:id="@+id/noteScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noteAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"


                android:paddingHorizontal="@dimen/_10sdp"

                android:background="?colorPrimary"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"

                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white"
                    android:contentDescription="@string/go_back"

                    android:clickable="true"
                    android:onClick="onBackButtonClick"

                    style="?android:borderlessButtonStyle"
                    android:adjustViewBounds="true"

                    />

                <ImageView
                    android:id="@+id/saveButton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/deleteNoteButton"


                    android:src="@drawable/ic_baseline_save_24"
                    app:tint="?colorAccent"
                    android:contentDescription="@string/save"

                    android:clickable="true"
                    android:onClick="onSaveButtonClick"

                    style="?android:borderlessButtonStyle"
                    android:adjustViewBounds="true"
                     />

                <ImageView
                    android:id="@+id/deleteNoteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:src="@drawable/ic_baseline_delete_24"
                    android:contentDescription="@string/delete"
                    app:tint="#FF5252"

                    android:clickable="true"
                    android:onClick="onDeleteButtonClick"

                    style="?android:borderlessButtonStyle"
                    android:adjustViewBounds="true"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/customInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/noteAppBar"
                app:layout_constraintBottom_toTopOf="@id/titleText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_marginTop="@dimen/_4sdp"

                android:fontFamily="@font/lucida_console"
                android:textSize="@dimen/_8sdp"

                android:text="@string/sample_text_holder"
                />

            <EditText
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/customInfoText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"

                android:inputType="text"
                android:importantForAutofill="no"

                android:hint="@string/tittle"
                android:fontFamily="@font/texgyreadventor_bold"
                android:textSize="@dimen/_24sdp"
                android:includeFontPadding="false"
                android:background="@null"
                />

            <EditText
                android:id="@+id/tagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/titleText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"

                android:inputType="text"
                android:importantForAutofill="no"

                android:hint="@string/tags"
                android:fontFamily="@font/texgyreadventor_italic"
                android:textSize="@dimen/_12sdp"
                android:includeFontPadding="false"
                android:background="@null"
                />

            <EditText
                android:id="@+id/contentText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:minHeight="@dimen/_100sdp"
                android:gravity="top"

                app:layout_constraintTop_toBottomOf="@id/tagText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@null"

                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"

                android:inputType="textMultiLine"
                android:importantForAutofill="no"

                android:fontFamily="@font/texgyreadventor_regular"
                android:includeFontPadding="false"

                android:hint="@string/lorem_ipsum"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>