<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/searchGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_vertical"

        android:paddingHorizontal="@dimen/_6sdp"

        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"

        android:orientation="horizontal"

        android:background="@drawable/search_group_bg"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"

            android:contentDescription="@string/app_name" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="@dimen/_6sdp"

            android:hint="@string/search_your_notes"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:fontFamily="@font/texgyreadventor_regular"
            android:textSize="@dimen/_10sdp"
            android:importantForAutofill="no"
            android:includeFontPadding="false"

            android:background="@null"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/dropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/appName"
        android:text="@string/app_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/searchGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_vertical"

        android:fontFamily="@font/texgyreadventor_regular"
        android:textSize="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:background="?android:colorBackground"

        android:paddingHorizontal="@dimen/_8sdp"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"


        app:layout_constraintTop_toBottomOf="@id/searchGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginHorizontal="@dimen/_10sdp"

        android:clipToPadding="false"
        android:clickable="false"
        />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"

        android:contentDescription="@string/add_new_note"
        android:src="@drawable/ic_baseline_add_24"

        android:onClick="onCreateNote"
        />

</androidx.constraintlayout.widget.ConstraintLayout>